[dependencies]
bincode = '1.1.3'
rmp-serde = '0.13.7'
serde = '1.0.90'
serde_derive = '1.0.90'
serde_yaml = '0.8.8'

[dependencies.hashbrown]
features = ['serde']
version = '0.2.2'

[dependencies.uuid]
features = [
    'v4',
    'serde',
]
version = '0.7.4'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
    'database',
    'database-implementations',
    'data-structures',
]
description = 'An in-memory pseudo database that provides functionality for managing pseudo-relational tables and their schema'
documentation = 'https://docs.rs/rql'
edition = '2018'
keywords = [
    'sql',
    'orm',
    'in-memory',
    'table',
    'schema',
]
license = 'MIT'
name = 'rql'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/rql'
version = '0.1.0'
