[dependencies]
bincode = '1.1.4'
mashup = '0.1.9'
rmp-serde = '0.13.7'
serde = '1.0.98'
serde_derive = '1.0.98'
serde_yaml = '0.8.9'

[dependencies.uuid]
features = [
    'v4',
    'serde',
]
version = '0.7.4'

[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
categories = [
    'database',
    'database-implementations',
    'data-structures',
]
description = 'An in-memory pseudo database that provides functionality for managing pseudo-relational tables and their schema'
documentation = 'https://docs.rs/rql'
edition = '2018'
keywords = [
    'sql',
    'orm',
    'in-memory',
    'table',
    'schema',
]
license = 'MIT'
name = 'rql'
readme = 'readme.md'
repository = 'https://github.com/kaikalii/rql'
version = '0.5.1'
